Implemented recycler view at post a ride and request

--- a/app/src/main/res/layout/fragment_requests.xml
+++ b/app/src/main/res/layout/fragment_requests.xml
@@ -11,6 +11,5 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:padding="8dp"
-        tools:listitem="@layout/item_request" />
-
+        tools:listitem="@layout/item_posted_requested" />
 </FrameLayout>
