--- a/app/src/main/res/layout/fragment_posted_requests_userview.xml
+++ b/app/src/main/res/layout/fragment_posted_requests_userview.xml
@@ -5,21 +5,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PostedRidesUserViewFragment">
+    tools:context=".PostedRequestsUserViewFragment">
 
     <!-- Empty State View -->
     <include
         android:id="@+id/emptyStateLayout"
-        layout="@layout/fragment_post_ride"
+        layout="@layout/fragment_post_request"
         android:visibility="visible"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- RecyclerView for posted rides -->
+    <!-- RecyclerView for posted requests -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewPostedRides"
+        android:id="@+id/recyclerViewPostedRequests"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="8dp"
@@ -29,15 +29,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/item_posted_rides" />
+        tools:listitem="@layout/item_posted_requested" />
 
     <!-- Floating Action Button -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabPostRide"
+        android:id="@+id/fabPostReq"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
-        android:contentDescription="Post a Ride"
+        android:contentDescription="Post a Request"
         android:src="@drawable/ic_add"
         app:backgroundTint="@android:color/holo_red_light"
         app:layout_constraintBottom_toBottomOf="parent"
