made some chnages in UI

--- a/app/src/main/res/layout/fragment_my_rides.xml
+++ b/app/src/main/res/layout/fragment_my_rides.xml
@@ -7,6 +7,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_my_rides"
+        android:fitsSystemWindows="true"
+        android:clipToPadding="false"
+        android:paddingBottom="96dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
