--- a/app/src/main/res/layout/bottom_sheet_post_ride.xml
+++ b/app/src/main/res/layout/bottom_sheet_post_ride.xml
@@ -39,7 +39,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Date and Time"
-        android:inputType="text"
+        android:inputType="none"
+        android:focusable="false"
+        android:clickable="true"
         android:padding="10dp"
         android:layout_marginTop="8dp"
         android:background="@android:drawable/edit_text" />
