--- a/app/src/main/res/layout/bottom_sheet_post_ride.xml
+++ b/app/src/main/res/layout/bottom_sheet_post_ride.xml
@@ -35,26 +35,27 @@
         android:background="@android:drawable/edit_text" />
 
     <EditText
-        android:id="@+id/dateTime"
+        android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Date and Time"
+        android:layout_marginTop="8dp"
+        android:background="@android:drawable/edit_text"
+        android:clickable="true"
+        android:focusable="false"
+        android:hint="Date"
+        android:inputType="none"
+        android:padding="10dp" />
+    <EditText
+        android:id="@+id/time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@android:drawable/edit_text"
+        android:hint="Time"
         android:inputType="none"
         android:focusable="false"
         android:clickable="true"
-        android:padding="10dp"
-        android:layout_marginTop="8dp"
-        android:background="@android:drawable/edit_text" />
-
-    <EditText
-        android:id="@+id/notes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Notes (optional)"
-        android:inputType="text"
-        android:padding="10dp"
-        android:layout_marginTop="8dp"
-        android:background="@android:drawable/edit_text" />
+        android:padding="10dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
