--- a/app/src/main/res/layout/fragment_post_ride.xml
+++ b/app/src/main/res/layout/fragment_post_ride.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="20dp"
-        android:text="You haven’t posted any myRides yet!"
+        android:text="You haven’t posted any Rides yet!"
         android:textColor="@android:color/darker_gray"
         android:textSize="24sp"
         android:textStyle="bold"
