--- a/app/src/main/res/layout/bottom_sheet_edit_request.xml
+++ b/app/src/main/res/layout/bottom_sheet_edit_request.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Update you Ride Offer"
+        android:text="Update you Ride Request"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
