--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     android:background="@android:color/white">
 
     <!-- Top logo + name section -->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/top_section"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:paddingBottom="16dp">
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:id="@+id/profile_logo"
@@ -30,14 +33,18 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:paddingStart="16dp"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black" />
     </LinearLayout>
 
     <!-- Scrollable buttons section -->
     <ScrollView
-        android:layout_width="match_parent"
+        android:id="@+id/scroll_area"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        app:layout_constraintTop_toBottomOf="@id/top_section"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:orientation="vertical"
@@ -45,7 +52,8 @@
             android:layout_height="wrap_content"
             android:divider="?android:attr/listDivider"
             android:showDividers="middle"
-            android:dividerPadding="8dp">
+            android:dividerPadding="8dp"
+            android:padding="16dp">
 
             <Button
                 android:id="@+id/button_my_rides"
@@ -79,13 +87,11 @@
                 android:layout_marginVertical="8dp"
                 android:textAllCaps="false" />
 
-            <!-- Spacer -->
-
             <Button
                 android:id="@+id/button_logout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:layout_marginVertical="8dp"
                 android:text="Logout"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
@@ -96,8 +102,10 @@
                 android:layout_height="wrap_content"
                 android:text="Remove Account"
                 android:textAllCaps="false"
+                android:layout_marginVertical="8dp"
                 android:textColor="@color/white" />
+
         </LinearLayout>
     </ScrollView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
