--- a/app/src/main/res/layout/item_coin_counter.xml
+++ b/app/src/main/res/layout/item_coin_counter.xml
@@ -23,9 +23,9 @@
         android:id="@+id/coin_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="100"
-        android:textSize="16sp"
-        android:textStyle="bold"
         android:paddingStart="6dp"
-        android:textColor="@color/black" />
+        android:text="no coins"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 </LinearLayout>
