--- a/app/src/main/res/layout-land/activity_signup.xml
+++ b/app/src/main/res/layout-land/activity_signup.xml
@@ -1,72 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sign_up_scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:fitsSystemWindows="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!-- Background image -->
         <ImageView
             android:id="@+id/bgimgSignup"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:alpha="0.3"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/login_img" />
 
+        <!-- SignUp title -->
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
             android:text="Sign Up"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="40sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
+            android:layout_marginTop="60dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
+        <!-- Subtitle -->
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="Sign Up to be a DAWG RIDER"
             android:textSize="18sp"
             android:textStyle="italic"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.2"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/textView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
+        <!-- Email field -->
         <EditText
             android:id="@+id/signUpMail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="60dp"
             android:layout_marginEnd="16dp"
-            android:drawableStart="@drawable/email"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
-            android:padding="10dp"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:drawableStart="@drawable/email"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@id/textView2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView2" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
+        <!-- Password field -->
         <EditText
             android:id="@+id/signUpPassword"
             android:layout_width="0dp"
@@ -74,16 +77,17 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:drawableStart="@drawable/lock"
             android:hint="Password"
             android:inputType="textPassword"
             android:minHeight="48dp"
-            android:padding="10dp"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:drawableStart="@drawable/lock"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@id/signUpMail"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/signUpMail" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
+        <!-- Sign Up button -->
         <Button
             android:id="@+id/signUpMailButton"
             android:layout_width="wrap_content"
@@ -91,9 +95,9 @@
             android:layout_marginTop="24dp"
             android:backgroundTint="@android:color/holo_red_light"
             android:text="Sign Up"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/signUpPassword"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/signUpPassword" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
