--- a/app/src/main/res/layout-land/activity_selection.xml
+++ b/app/src/main/res/layout-land/activity_selection.xml
@@ -6,15 +6,16 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <!-- Driver Section -->
+    <!-- Driver Section (Left Half) -->
     <FrameLayout
         android:id="@+id/driverSection"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/riderSection"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toStartOf="@id/riderSection"
+        app:layout_constraintWidth_percent="0.5">
 
         <ImageView
             android:id="@+id/driverImage"
@@ -28,21 +29,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Driver"
-            android:textSize="28sp"
+            android:textSize="35sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
             android:layout_gravity="center" />
     </FrameLayout>
 
-    <!-- Rider Section -->
+    <!-- Rider Section (Right Half) -->
     <FrameLayout
         android:id="@+id/riderSection"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/driverSection"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintStart_toEndOf="@id/driverSection"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.5">
 
         <ImageView
             android:id="@+id/riderImage"
@@ -56,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Rider"
-            android:textSize="28sp"
+            android:textSize="35sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
             android:layout_gravity="center" />
